# snake-pass-watch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  Makefile  docker-compose.yml  openapi.yaml  package.json  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  broker.py  db.py  db_store.py  main.py  models.py  security.py  storage.py  store.py
backend/app/routers/: active_games.py  auth.py  scores.py
backend/tests/: conftest.py  test_active_games.py  test_auth.py  test_scores.py
backend/tests/integration/: conftest.py  test_api_db.py
backend/tests_integration/: conftest.py  test_api.py  test_db_store.py  test_full_flow.py
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: SnakeBoard.tsx
frontend/src/game/: snake.test.ts  snake.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: index.tsx  leaderboard.tsx  watch.$userId.tsx
frontend/src/services/: http.ts  index.ts  mock.test.ts  mock.ts  types.ts
src/: routeTree.gen.ts
src/components/: NavBar.tsx
src/routes/: auth.tsx  watch.tsx
